2004-11-01  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/option.sgml: Updates

2004-10-31  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/windows.sgml: Document G_WIN32_IS_NT_BASED,
	G_WIN32_HAVE_WIDECHAR_API.

	* glib/glib-sections.txt: Add g_lstat

	* glib/running.sgml: Document G_WIN32_PRETEND_WIN9X.

2004-10-29  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/option.sgml: Add an example.

	* glib/glib-sections.txt: Add G_OPTION_REMAINING

	* glib/tmpl/option.sgml: Add docs.

2004-10-28  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/keyfile.sgml: Add some introductory notes.

2004-10-27 Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.5.4 ===

2004-10-27  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/fileutils.sgml: Add some intro.

2004-10-26  Matthias Clasen  <mclasen@redhat.com>

	* gobject/gobject-docs.sgml: Add an index for 2.6 additions.

	* gobject/gobject-sections.txt: Additions.

	* gobject/Makefile.am (IGNORE_HFILES): Add gobjectalias.h

	* glib/tmpl/main.sgml: Document GChildWatchFunc

	* glib/tmpl/keyfile.sgml: New template.

	* glib/glib-sections.txt: Additions.

	* glib/tmpl/macros_misc.sgml: Document some more of
	the macros.

2004-10-25  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-docs.sgml:  Add GKeyFile section, add
	index for 2.6 additions.

2004-10-23  Matthias Clasen  <mclasen@redhat.com>

	* gobject/tmpl/gtype.sgml (GTypeInterfaceCheckData):
	Rename first parameter.

	* glib/glib-sections.txt: Add GKeyFile section.

2004-10-17  Matthias Clasen  <mclasen@redhat.com>

	* glib/tmpl/macros.sgml: 
	* glib/glib-sections.txt: Document G_IS_DIR_SEPARATOR. 

2004-10-05  Matthias Clasen  <mclasen@redhat.com>

	* gobject/tmpl/objects.sgml: Improve the docs for
	g_object_get_property().  (#153424, Stefan Kost)

2004-10-03  Matthias Clasen  <mclasen@redhat.com>

	* gobject/tmpl/signals.sgml: Improve docs for 
	g_signal_add_emission_hook.  (#154299, Nickolay V. Shmyrev)
